# indicf5-finetune

./: .gitignore  README.md  pyproject.toml
src/f5_tts/model/: trainer.py
src/indicf5_finetune/: __init__.py  evaluate.py  prepare_data.py  train.py
voices/: voices.json
